// Copyright 2024 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.config.access;

option java_package = "org.wfanet.measurement.config.access";
option java_multiple_files = true;
option java_outer_classname = "OpenIdProvidersConfigProto";

message OpenIdProvidersConfig {
  // Expected audience (`aud` claim) in bearer JWTs.
  string audience = 1;

  message ProviderConfig {
    // JSON Web Key Set (JWKS) for the provider.
    string jwks = 1;
  }
  // Map of issuer to `ProviderConfig`.
  map<string, ProviderConfig> provider_config_by_issuer = 2;
}
